--- a/WebRoot/module/css/employeeManage/employeeManage.css
+++ b/WebRoot/module/css/employeeManage/employeeManage.css
@@ -1,4 +1,5 @@
 @CHARSET "UTF-8";
+
 .content input,.content select {
 	display: inline;
 	width: 160px;
@@ -26,15 +27,15 @@
 	color: #fff;
 	font-size: 14px;
 	margin-top: 30px;
-	min-width:1170px;
+	min-width: 1170px;
 }
 
-#table  thead tr {	
+#table  thead tr {
 	background: #364760;
 }
 
-#table td {	
-	font-size: 14px;	
+#table td {
+	font-size: 14px;
 	color: #333;
 }
 
@@ -54,13 +55,14 @@
 	font-family: "Microsoft YaHei-Regular";
 	font-size: 14px;
 	color: #333;
+	width: 30%;
 }
 
 .content input {
 	margin-right: 10px;
 	font-size: 12px;
 	color: #666;
-	display:inline;
+	display: inline;
 }
 
 .modal-content {
@@ -99,13 +101,13 @@
 	font-size: 16px;
 	color: #333;
 	margin-left: 20px;
+	display: inline;
 }
 
 .modal-body input,.modal-body select {
 	display: inline;
 	width: 270px;
 	height: 32px;
-	margin-top: 20px;
 	margin-left: 10px;
 	font-size: 14px;
 	color: #666;
@@ -124,16 +126,20 @@
 	padding: 0;
 }
 
-.col-xs-3{
-	margin-bottom:10px;
+.col-xs-3 {
+	margin-bottom: 10px;
 }
 
-.btn3:hover{
-	background:#ffad33;
+.btn3:hover {
+	background: #ffad33;
 }
 
-.container{
-	width:100%;
-	min-width:1200px;
-	padding:0;
+.container {
+	width: 100%;
+	min-width: 1200px;
+	padding: 0;
+}
+
+.col-xs-12,col-md-12 {
+	margin-top: 20px;
 }
