--- a/WebRoot/module/css/contractManage/EditContract.css
+++ b/WebRoot/module/css/contractManage/EditContract.css
@@ -212,7 +212,45 @@ label.wide{
 .testProjectName ul li:hover{
 	background-color:#dcdcdc;
 }
-
+.sample{
+	position: absolute;
+	height: auto;
+	max-height: 100px;
+    overflow-y: hidden;
+    overflow-x: hidden;
+    margin-left: 21.5%;
+    float: left;
+    width: 66.5%;
+    display: none;
+    border: 1px solid #ccc;
+    border-top: none;
+    border-radius: 3px;
+    background-color: #fff;
+    z-index: 10;
+}
+.sample ul {
+	display: block;
+	height:auto;
+    max-height: 100px;
+    overflow-y: scroll;
+	border:none;
+	margin:0;
+	margin-left:-40px;
+}
+.sample ul li{
+	display: block;
+    vertical-align: middle;
+	height:30px;
+	line-height: 30px;
+	list-style-type: none;
+	text-indent: 12px;
+}
+.sample ul li.noDate{
+ 	color: red;
+}
+.sample ul li:hover{
+	background-color:#dcdcdc;
+}
 .contractFile{
 	width:99%;
 	margin:20px 10px;
