--- a/WebRoot/module/css/contractManage/EditContract.css
+++ b/WebRoot/module/css/contractManage/EditContract.css
@@ -253,6 +253,7 @@ label.wide{
 }
 .contractFile{
 	width:99%;
+	min-height:300px;
 	margin:20px 10px;
 }
 .contractFile .top{
@@ -268,12 +269,13 @@ label.wide{
 	margin:0 10px;
 }
 .contractFile .top .btnAdd{
-	margin:0 5px;
+	margin-top: -2px;
+    margin-right: 10px;
 }
-.contractFile .top  .btnAdd button{
+.contractFile .top .btnAdd button{
 	width:106px;
 	height:30px;
-	line-height:30px;
+	line-height:20px;
 	font-size:14px;
 	background-color:#198ac8;
 	color:#fff;
@@ -281,7 +283,7 @@ label.wide{
 }
 .contractFile .bottom{
 	margin:20px 10px;
-	height:inherit;
+	height:250px;
 	width:99%;
 	border:1px solid #ccc;
 }
@@ -304,9 +306,10 @@ label.wide{
 	margin:0 10px;
 }
 .contractFileItem .top .btnAdd{
-	margin:5px;
+	margin-top: 4px;
+    margin-right: 10px;
 }
-.contractFileItem .top  .btnAdd button{
+.contractFileItem .top .btnAdd button{
 	width:106px;
 	height:30px;
 	line-height:20px;
