--- a/WebRoot/module/css/taskManage/taskView.css
+++ b/WebRoot/module/css/taskManage/taskView.css
@@ -1,7 +1,7 @@
 @CHARSET "UTF-8";
 
 body {
-	min-width : 1100px;
+	min-width: 1100px;
 	width: 99%;
 }
 
@@ -52,20 +52,21 @@ body {
 	margin-left: 10px;
 }
 
-#equipmentInfo button:hover,.sampleInfo button:hover {
+#equipmentInfo button:hover,.sampleInfo button:hover,#testprojectInfo button:hover
+	{
 	background-color: #ffad33 !important;
 }
 
-#ensure {
+#ensure,#registTestprojectSure {
 	background-color: #238bc8 !important;
 }
 
-.equipmentList {
+.equipmentList,.testprojectList {
 	height: 250px;
 	overflow-y: scroll;
 }
 
-.equipmentList div {
+.equipmentList div,.testprojectList div {
 	margin-top: 10px
 }
 
