--- a/WebRoot/module/css/manhourManage/testManHour.css
+++ b/WebRoot/module/css/manhourManage/testManHour.css
@@ -1,13 +1,80 @@
-@CHARSET "UTF-8";
+.container {
+	width: 100%;
+	min-width: 1200px;
+	padding: 0;
+}
 
 .content input,.content select {
 	display: inline;
-	width: 160px;
+	width: 60%;
+}
+
+.content label{
+	font-family: "Microsoft YaHei-Regular";
+	font-size: 14px;
+	color: #333;
+	width: 30%;
+}
+
+.content input {
+	font-size: 13px;
+	color: #666;
+}
+
+.testName{
+	position: absolute;
+	height: auto;
+	max-height: 100px;
+    overflow-y: hidden;
+    overflow-x: hidden;
+	margin-left:17.2%;
+	width:66.5%;
+	display:none;
+	border:1px solid #ccc;
+	border-top:none;
+	border-radius:3px;
+	background-color:#fff;
+	z-index: 10;
+}
+.testName ul {
+	display: block;
+	height:auto;
+    max-height: 100px;
+    overflow-y: scroll;
+	border:none;
+	border-radius:3px;
+	margin:0;
+	margin-left:-40px;
+}
+.testName ul li{
+	display: block;
+    vertical-align: middle;
+	height:30px;
+	line-height: 30px;
+	list-style-type: none;
+	text-indent: 12px;
+	background-color:#fff;
+}
+.testName ul li.noDate{
+ 	color: red;
+}
+.testName ul li:hover{
+	background-color:#dcdcdc;
+}
+
+
+.col-xs-4{
+	margin-bottom: 10px;
+}
+
+.btn3:hover {
+	background: #ffad33;
 }
 
 .top {
 	height: 50px;
-	background-color: rgba(27, 137, 196, 0.1);
+	background:#9abdd0;
+	opacity: 0.69;
 }
 
 .top button {
@@ -43,34 +110,6 @@
 	background-color: rgba(54, 71, 96, 0.2);
 }
 
-.head {
-	width: 100%;
-}
-
-.content {
-	margin-left: 30px;
-}
-
-.content label {
-	font-family: "Microsoft YaHei-Regular";
-	font-size: 14px;
-	color: #333;
-	width: 30%;
-}
-
-.content input {
-	margin-right: 10px;
-	font-size: 12px;
-	color: #666;
-	display: inline;
-}
-
-.modal-content {
-	width: 810px;
-	height: 500px;
-	margin: auto;
-}
-
 .modal-header {
 	background: #364760;
 	height: 40px;
@@ -101,15 +140,16 @@
 	font-size: 16px;
 	color: #333;
 	margin-left: 20px;
+	width:70px;
 	display: inline;
 }
 
 .modal-body input,.modal-body select {
 	display: inline;
-	width: 270px;
-	height: 32px;
+	width: 70%;
+	height: 34px;
 	margin-left: 10px;
-	font-size: 14px;
+	font-size: 13px;
 	color: #666;
 }
 
@@ -122,54 +162,6 @@
 	margin-top: 30px;
 }
 
-.col-xs-12 {
-	padding: 0;
-}
-
-.col-xs-3 {
-	margin-bottom: 10px;
-}
-
-.btn3:hover {
-	background: #ffad33;
-}
-
-.container {
-	width: 100%;
-	min-width: 1200px;
-	padding: 0;
-}
-
-
-.col-xs-6,col-md-6 {
-	margin-top: 20px;
-}
-
 .col-xs-12,col-md-12 {
 	margin-top: 20px;
 }
-
-.modal-dialog{
-	width:810px !important;
-}
-
-.timeLabelDiv{
-  float:left;
-  height: 34px;
-  min-width: 70px;
-}
-
-.timeLabelDiv label{
-  margin-top: 7px;
-}
-
-.timeChooseDiv{
- width: 50%;
- margin-top: 0px;
-}
-
-.timeChoose{
- width: 72%;
- margin-top: 0px;
-}
-
