--- a/WebRoot/module/css/changeACE.css
+++ b/WebRoot/module/css/changeACE.css
@@ -3,7 +3,12 @@
 .fixed-table-container {
 	height: auto;
 }
-
+*{
+	font-size:10px !important;
+}
+.table{
+	font-size:10px !important;
+}
 .fixed-table-body {
 	height: auto;
 	 margin-bottom: -10px;
