--- a/WebRoot/module/css/commonSystem/commonSystem.css
+++ b/WebRoot/module/css/commonSystem/commonSystem.css
@@ -1,14 +1,20 @@
 @CHARSET "UTF-8";
 *{
-	
+	font-size:10px !important;
 }
 
 .bootstrap-table .table thead tr{
 	color:#fff;
 	background:#364760;
-	font-size: 14px;
+	font-size: 11px;
 }  
 
+.table{
+	font-size:10px !important;
+}
+.tree{
+		font-size:10px !important;
+}
 .btn-primary {
 	background-color: #238bc8;
 }
