--- a/WebRoot/module/css/index/index.css
+++ b/WebRoot/module/css/index/index.css
@@ -1,5 +1,21 @@
 
 @CHARSET "UTF-8";
+*{
+	font-size:10px !important;
+}
+
+.bootstrap-table .table thead tr{
+	color:#fff;
+	background:#364760;
+	font-size: 11px;
+}  
+
+.table{
+	font-size:10px !important;
+}
+.tree{
+		font-size:10px !important;
+}
 .contairw {
 	min-width: 1300px;
 }
