--- a/WebRoot/module/css/moduleManage/moduleManage.css
+++ b/WebRoot/module/css/moduleManage/moduleManage.css
@@ -3,6 +3,12 @@
 	width:900px;
 	float: right;
 }
+*{
+	font-size:10px !important;
+}
+.table{
+	font-size:10px !important;
+}
 #tree {
 	width:200px;
 	float:left;
