--- a/WebRoot/module/css/traceability/traceabilityResult.css
+++ b/WebRoot/module/css/traceability/traceabilityResult.css
@@ -17,10 +17,14 @@
 	width: 130px;
 }
 .wrapper{
-	width:1100px;
 	margin:0 auto;
 	text-align:left;
 }
+.table thead tr{
+	color:#fff;
+	background:#364760;
+	font-size: 14px;
+}  
 .Ntable tr{
 	display:block;
 	height:22px !important;
