--- a/WebRoot/module/css/timecheck/TimeCheck.css
+++ b/WebRoot/module/css/timecheck/TimeCheck.css
@@ -12,9 +12,12 @@
 	width:100%;
 
 }
-label{
-    min-width: 80px;
-}
+ label{
+    display: inline-block;
+	max-width: 100%;
+	margin-bottom: 5px;
+	font-weight: 700
+} 
 .form-control {
     display: inline;
     width: 70%;
@@ -42,15 +45,18 @@ label{
 	line-height:36px;
 }
 .text{
-	width:200px;
+	display: inline;
+	width: 70%;
+}
+.form-control{
+	display: inline;
+	width: 70%;
 }
 .btncss{
 	display:inline-block;
 	width:80px;
 }
-.thisbtn{
-	margin-left:20px;
-}
+
 .tablecontent{
 	margin-top:10px;
 }
@@ -134,4 +140,68 @@ li:hover{
 }
 #showdiv1{
 	width:300px;
+}
+.input-group {
+	margin-top: 10px;
+}
+
+.input-group .btn {
+	margin-left: 3px;
+}
+.timeChooseDiv {
+	width: 70%;
+	margin-top: 0px;
+}
+.input-group-addon {
+	background-color: #fff;
+}
+.timeLabelDiv{
+	float: left;
+	height: 34px;
+	width: 26%;
+	min-width: 80px;
+}
+.timeLabelDiv label {
+	margin-top: 7px;
+}
+#restcontent{
+	height: 70px;
+	background-color: #e8f3f9;
+	position: relative;
+}
+.btncss{
+	position: absolute;
+	right: 30px;
+	top: 50%;
+	margin-top: -17px;
+}
+.btncss:hover {
+    background: #ffc773;
+}
+.Allbtn{
+	position: absolute;
+	right: 130px;
+	top: 50%;
+	margin-top: -17px;
+}
+.Allbtn:hover {
+    background: #ffc773;
+}
+.OKbtn{
+	position: absolute;
+	right: 240px;
+	top: 50%;
+	margin-top: -17px;
+}
+.OKbtn:hover {
+    background: #ffc773;
+}
+.NObtn{
+	position: absolute;
+	right: 320px;
+	top: 50%;
+	margin-top: -17px;
+}
+.NObtn:hover {
+    background: #ffc773;
 }
