--- a/WebRoot/module/css/manhourManage/checkManHour.css
+++ b/WebRoot/module/css/manhourManage/checkManHour.css
@@ -1,10 +1,5 @@
 @CHARSET "UTF-8";
 
-.container {
-	width: 100%;
-	min-width: 1200px;
-	padding: 0;
-}
 
 .content input,.content select {
 	display: inline;
@@ -54,7 +49,6 @@
 	color: #fff;
 	font-size: 14px;
 	margin-top: 30px;
-	min-width: 1170px;
 }
 
 #table  thead tr {
@@ -250,4 +244,7 @@
 	background-color:#dcdcdc;
 }
 
-
+.row{
+	margin-left:0;
+	margin-right:0;
+}
