--- a/WebRoot/module/css/inspectionStaffDesktop/inspectionStaffDesktop.css
+++ b/WebRoot/module/css/inspectionStaffDesktop/inspectionStaffDesktop.css
@@ -69,7 +69,7 @@
 
 .buttons{
 	margin-top: 20px;
-	margin-left: 15px;
+	margin-left: 40px;
 }
 
 .task_button {
@@ -81,7 +81,7 @@
 	border:2px solid;
 	margin-bottom: 10px;
 	margin-top: 20px;
-	margin-left:15px;
+	margin-left:50px;
 	padding: 0；
 
 }
@@ -163,5 +163,23 @@
 
 .table-hover>tbody>tr:hover>td,.table-hover>tbody>tr:hover>th {
 	background-color: rgba(209, 231, 243, 1);
+}
+
+.tidingHead ul li {
+	float:left;
+	width:80px;
+	list-style:none;
+	color: #fff;
+    border-radius: 5px;
+    padding-left: 13px;
+    margin-right: 10px;
+    margin-bottom: 4px;
+    background: #c5d0dc;
+}
+.tidingHead ul li:hover {
+	
+}
+.tidingHead ul li.selected {
+	 background: #0a8fe7;
 }
 
