--- a/WebRoot/module/css/traceability/traceabilityAudit.css
+++ b/WebRoot/module/css/traceability/traceabilityAudit.css
@@ -17,7 +17,7 @@
 	width: 90px;
 }
 .wrapper{
-	width:1100px;
+	width:99%;
 	margin:0 auto;
 	text-align:left;
 }
@@ -38,3 +38,84 @@
 	margin-top:5px;
 	cursor:pointer;
 }
+/*新增样式*/
+.row{
+	margin-bottom: 10px;
+}
+.row label{
+	width: 20%;
+	min-width: 80px;
+}
+label{
+	display: inline-block;
+	max-width: 100%;
+	margin-bottom: 5px;
+	font-weight: 700;
+}
+.text{
+	display:inline-block;
+	width:70%;
+	margin-top:-5px;
+}
+.spanstyle{
+	float: left;
+}
+.timeLabelDiv{
+	float: left;
+	height: 34px;
+	width: 20%;
+	min-width: 80px;
+}
+.timeLabelDiv label {
+	margin-top: 7px;
+}
+.timeChooseDiv {
+	width: 70%;
+	margin-top: 0px;
+}
+#restcontent{
+	height: 70px;
+	background-color: #e8f3f9;
+	position: relative;
+}
+.btncss{
+	position: absolute;
+	right: 30px;
+	top: 50%;
+	margin-top: -17px;
+}
+.btncss:hover {
+    background: #ffc773;
+}
+.Allbtn{
+	position: absolute;
+	right: 110px;
+	top: 50%;
+	margin-top: -17px;
+}
+.Allbtn:hover {
+    background: #ffc773;
+}
+.OKbtn{
+	position: absolute;
+	right: 220px;
+	top: 50%;
+	margin-top: -17px;
+}
+.OKbtn:hover {
+    background: #ffc773;
+}
+.NObtn{
+	position: absolute;
+	right: 300px;
+	top: 50%;
+	margin-top: -17px;
+}
+.NObtn:hover {
+    background: #ffc773;
+}
+.table thead tr{
+	color:#fff;
+	background:#364760;
+	font-size: 14px;
+} 
