--- a/WebRoot/module/css/traceability/traceability.css
+++ b/WebRoot/module/css/traceability/traceability.css
@@ -1,22 +1,34 @@
 .list-searcher {
 	min-width: 300px;
 	height: 40px;
+	/* margin-bottom:10px; */
 }
-.list-searcher input {
-	display: inline-block;
-	margin-right: 20px;
-	width: 200px;
+label {
+    width: 21%;
+    min-width: 80px;
+    float: left;
 }
-.list-searcher select {
-	display: inline-block;
-	margin-right: 20px;
-	width: 200px;
+.thisbtn {
+    float: right;
+    margin-top: 18px;
+    margin-right: 20px;
+}
+#restcontent {
+    height: 70px;
+    background-color: #e8f3f9;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    position: relative;
+}
+.form-control{
+	display: inline;
+    width: 70%;
+}
+.timeChooseDiv {
+    width: 70%;
+    margin-top: 0px;
 }
 
-.list-searcher span {
-	display: inline-block;
-	width: 100px;
-}/* 
 .list_upload {
 	width:500px;
 	height: 300px;
@@ -26,6 +38,11 @@
 	width: 150px;
 	margin-top:20px;
 	margin-bottom:30px;
+}
+.table thead tr {
+    color: #fff;
+    background: #364760;
+    font-size: 14px;
 }
 .list_upload span {
 	width: 100px;
