--- a/WebRoot/Portal/css/classicCase/CaseDetails.css
+++ b/WebRoot/Portal/css/classicCase/CaseDetails.css
@@ -89,11 +89,11 @@
 	background:-webkit-gradient(linear, 0% 0%, 0% 100%, from(#F2F2F2), to(#fff));
 }
 #rightlist{
-	overflow :auto;
+/*	overflow :auto;*/
 	width:950px;
-	height:800px;
+/*	height:800px;*/
 	margin-left:40px;
-	border:1px solid rgb(230,230,230);
+/*	border:1px solid rgb(230,230,230);*/
 	margin-top:30px;
 	float:left;
 }
