--- a/WebRoot/module/css/contractManage/EditContract.css
+++ b/WebRoot/module/css/contractManage/EditContract.css
@@ -12,7 +12,7 @@ body{
 }
 .showContract{
 	width:99%;
-	height:250px;
+	height:300px;
 	margin:20px 10px;
 }
 .showContract .top{
@@ -36,7 +36,7 @@ body{
 }
 .contract_code .contractCode{
 	height:40px;
-	width:300px;
+	width:340px;
 }
 .control-label{
 	width: 22%;
@@ -49,7 +49,7 @@ body{
 }
 .showContract .bottom{
 }
-.showContract .bottom div.col-xs-4,div.col-md-2{
+.showContract .bottom div.col-xs-4,div.col-xs-9,div.col-md-2{
 	height:32px;
 	line-height:32px;
 	margin:10px 0;
