--- a/WebRoot/module/css/traceability/traceability.css
+++ b/WebRoot/module/css/traceability/traceability.css
@@ -108,3 +108,9 @@ label {
 	font-size:9px !important;
 	padding:2px 5px !important;
 }
+
+#listdata{
+	min-width: 120px;
+    padding-left: 0px;
+    text-align: center;
+}
