量质朔源乱码，空指针等异常修改

--- a/WebRoot/module/css/traceability/traceability.css
+++ b/WebRoot/module/css/traceability/traceability.css
@@ -114,3 +114,15 @@ label {
     padding-left: 0px;
     text-align: center;
 }
+
+#listdata1{
+	min-width: 120px;
+    padding-left: 0px;
+    text-align: center;
+}
+
+#listdata2{
+	min-width: 120px;
+    padding-left: 0px;
+    text-align: center;
+}
