--- a/WebRoot/module/css/sampleRoom/sampleRoom.css
+++ b/WebRoot/module/css/sampleRoom/sampleRoom.css
@@ -1,6 +1,8 @@
 @CHARSET "UTF-8";
-body{
+
+html ,body{
 	width:100%;
+	height:100%;
 }
 
 .input-group-area {
@@ -26,7 +28,10 @@ body{
  
     position: relative;
     top: 1px;
-    right: -7px;
+    right: 3px;
+}
+#submitFile .glyphicon{
+	font-size:14px;
 }
 .input-group-area  .btn-primary:HOVER {
 
