--- a/WebRoot/module/css/commonSystem/commonSystem.css
+++ b/WebRoot/module/css/commonSystem/commonSystem.css
@@ -19,6 +19,8 @@ html body{
 .btn-primary:hover {
 	background-color: #0677b5;
 }
+
+/** modal框*/
 .modal-dialog{
 	width:500px;
 }
@@ -38,11 +40,15 @@ html body{
 	background-color: #0677b5;
 }
 .modal-dialog p{
-	font-size: 16px;
+	font-size: 12px;
     color: #000;
     font-weight: bold;
     margin: 0px;
     padding: 0px;
+}
+.modal-header span{
+	font-size: 20px;
+    font-weight: bolder;
 }
 .modal-dialog  .modal-title {
 	color:#ffffff;
@@ -58,7 +64,28 @@ html body{
 }
 .modal-dialog .col-xs-12 input  ,.modal-dialog .col-md-12 input{
 	height: 25px;
+	font-size: 12px;
 }
 .modal-footer button{
 	font-size: 16px;
+}
+
+
+
+/** 弹框*/
+.sweet-alert h2{
+	font-size:14px;
+}
+.sweet-alert button {
+    background-color: #8CD4F5;
+    color: white;
+    border: none;
+    box-shadow: none;
+    font-size: 17px;
+    font-weight: 500;
+    -webkit-border-radius: 4px;
+    border-radius: 5px;
+    padding: 5px 15px;
+    margin: 26px 5px 0 5px;
+    cursor: pointer;
 }
