--- a/WebRoot/module/css/receiptlistManage/addReceiptlist.css
+++ b/WebRoot/module/css/receiptlistManage/addReceiptlist.css
@@ -62,7 +62,7 @@ body {
 .mainTitel button,.secondTitel button {
 	position: absolute;
 	right: 15px;
-	margin-top: -13px;
+	margin-top: -18px;
 }
 
 table {
@@ -131,7 +131,7 @@ table {
 	width: 100%;
 	display: block;
 	width: 100%;
-	height: 34px;
+	height: 26px;
 }
 
 h4,.h4 {
@@ -207,19 +207,26 @@ h4,.h4 {
 }
 
 .row label {
-	/* width: 70px; */
+	 width: 50px; 
 }
 
 .timeLabelDiv {
 	float: left;
-	height: 34px;
-	width: 70px;
+    height: 34px;
+    vertical-align: middle;
+    display: inline-block;
+    line-height: 34px;
 }
 
-.timeLabelDiv label {
+/* .timeLabelDiv label {
 	margin-top: 7px;
+} */
+.kemiche{
+	display: inline-block;
+    max-width: 100%;
+    margin-bottom: 5px;
+    font-weight: bold;
 }
-
 .timeChooseDiv {
 	width: 70%;
 	margin-top: 0px;
@@ -337,7 +344,7 @@ h4,.h4 {
 }
 #displayChecked {
 	width: 100%;
-	height: 100px;
+	height: 75px;
 	border: 1px solid #ccc;
 	border-radius: 5px;
 	min-height: 80px;
@@ -413,7 +420,7 @@ h4,.h4 {
 }
 .radioLabel{
 	
-	margin-top: 6px;
+	margin-top: 10px;
     width: 20%;
     display: inline-block;
 	
