量值朔源上传文件，以及页面修改

--- a/WebRoot/module/css/qualityPlan/QualityPlan.css
+++ b/WebRoot/module/css/qualityPlan/QualityPlan.css
@@ -5,6 +5,7 @@
 } */
 #main{
 	margin-left:16px;
+	width: 98%
 }
 #searcherArea{
 	margin-top: 7px;
@@ -170,7 +171,8 @@ li:hover{
 	display:none;
 }
 .fixed-table-body{
-	height:300px;
+	height:auto;
+	min-height: 450px;
 }
 .text{
 	display: inline;
