--- a/WebRoot/module/css/traceability/traceability.css
+++ b/WebRoot/module/css/traceability/traceability.css
@@ -4,8 +4,7 @@
 	/* margin-bottom:10px; */
 }
 label {
-    width: 21%;
-    min-width: 80px;
+    width: 80px;
     float: left;
 }
 .thisbtn {
@@ -125,4 +124,44 @@ label {
 	min-width: 120px;
     padding-left: 0px;
     text-align: center;
+}
+
+.modal-header{
+    min-height: 16.43px;
+    padding: 15px;
+    border-bottom: 1px solid #e5e5e5;
+    background: #37475f;
+    color: #fff;
+}
+
+.close{
+	color: #fff;
+    opacity: 1;
+}
+
+.close:hover{
+	color:#37475f;
+}
+
+.form-group{
+	margin-top:15px;
+	margin-bottom:15px;
+}
+
+.btn-default{
+	width:95px;
+	height:35px;
+	background: #fff;
+}
+
+.primary{
+	width:95px;
+	height:35px;
+	background: #37475f;
+	color: #fff;
+}
+
+.fixed-table-body{
+	height: auto;
+	min-height: 500px;
 }
