--- a/WebRoot/module/css/sampleRoom/sampleRoom.css
+++ b/WebRoot/module/css/sampleRoom/sampleRoom.css
@@ -10,20 +10,19 @@ html ,body{
 	width:100%;
 	height: 50px;
 /* 	background: #1b89c4; */
-	background:#9abdd0;
-	opacity: 0.69;
+	background-color: rgba(27, 137, 196, 0.1);
 }
 
 .input-group-area  .btn-primary {
     margin-top:8px;
 	margin-left: 26px;
-  /*   background: #198ac8; */
-    background: #089beb;
+    background: #198ac8;
     color: #fff;
     opacity: 1;
     font-size:14px;
-    z-index: 2222;
+    /**z-index: 2222;*/
 }
+
 .glyphicon:before {
  
     position: relative;
@@ -136,4 +135,8 @@ vertical-align: middle;
 } 
 .table tr td img{
     margin-right: 10px; 
+}
+
+.col-xs-12{
+	margin-top: 20px;
 }
