--- a/WebRoot/module/css/bootstrap.css
+++ b/WebRoot/module/css/bootstrap.css
@@ -3625,7 +3625,7 @@ tbody.collapse.in {
 .dropdown-menu > .active > a:focus {
   color: #fff;
   text-decoration: none;
-  background-color: #337ab7;
+  background-color: #364760;
   outline: 0;
 }
 .dropdown-menu > .disabled > a,
@@ -4809,8 +4809,8 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
   z-index: 2;
   color: #fff;
   cursor: default;
-  background-color: #337ab7;
-  border-color: #337ab7;
+  background-color: #364760;
+  border-color: #364760;
 }
 .pagination > .disabled > span,
 .pagination > .disabled > span:hover,
