--- a/WebRoot/module/css/commonSystem/commonSystem.css
+++ b/WebRoot/module/css/commonSystem/commonSystem.css
@@ -4,8 +4,9 @@
 }
 html body{
 	width:100%;
-	height:100%;
+	/*height:100%;*/
 	font-size:9px;
+	overflow: auto;
 }
 .bootstrap-table .table thead tr{
 	color:#fff;
