--- a/WebRoot/module/css/receiptlistManage/receiptlistReturn.css
+++ b/WebRoot/module/css/receiptlistManage/receiptlistReturn.css
@@ -110,3 +110,43 @@
 .col-xs-12,.col-md-12{
 	margin-top:10px;
 }
+
+.sampleSelect{
+	position: absolute;
+	height: auto;
+	max-height: 100px;
+    overflow-y: hidden;
+    overflow-x: hidden;
+    margin-left: 20%;
+    float: left;
+    width: 65.5%;
+    display: none;
+    border: 1px solid #ccc;
+    border-top: none;
+    border-radius: 3px;
+    background-color: #fff;
+    z-index: 10;
+}
+.sampleSelect ul {
+	display: block;
+	height:auto;
+    max-height: 100px;
+    overflow-y: scroll;
+	border:none;
+	margin:0;
+	margin-left:-40px;
+}
+.sampleSelect ul li{
+	display: block;
+    vertical-align: middle;
+	height:30px;
+	line-height: 30px;
+	list-style-type: none;
+	text-indent: 12px;
+}
+.sampleSelect ul li.noDate{
+ 	color: red;
+}
+.sampleSelect ul li:hover{
+	background-color:#dcdcdc;
+}
