谷歌浏览器适应，样品检测选择更正

--- a/WebRoot/module/css/taskManage/taskView.css
+++ b/WebRoot/module/css/taskManage/taskView.css
@@ -10,8 +10,10 @@ body {
 }
 
 .content {
-	width: 98%;
-	margin: 5px auto;
+	/*width: 98%;
+	margin: 5px auto;*/
+	overflow-x: hidden;
+    margin-bottom: 25px;
 }
 
 .hrStyle {
