--- a/WebRoot/module/css/timecheck/TimeCheck.css
+++ b/WebRoot/module/css/timecheck/TimeCheck.css
@@ -13,9 +13,9 @@
 
 }
  label{
-     float: left;
-       width: 21%;
-    min-width: 80px;
+     /*float: left;*/
+     width: 21%;
+     min-width: 80px;
 } 
 
 .form-control {
