部分页面横向滑动条问题修改

--- a/WebRoot/module/css/qualityPlan/QualityPlan.css
+++ b/WebRoot/module/css/qualityPlan/QualityPlan.css
@@ -3,10 +3,16 @@
 	width:94%;
 	margin:0 auto;
 } */
+body {
+    margin: 0;
+    overflow-x: hidden;
+}
+
 #main{
 	margin-left:16px;
 	width: 98%
 }
+
 #searcherArea{
 	margin-top: 7px;
 }
